Changed the body style.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,8 @@
-html {
+body {
     background-color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
+    text-align: center;
 }
 
 .container {
@@ -9,13 +10,15 @@ html {
     margin: 0 auto;
 }
 
-h1, p, a {
-    text-align: center;
-}
 
 video, img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 10px;
+}
+
+footer p {
+    text-align: right;
+    font-size: 12px;
 }
